<resources>
    <string name="app_name">Assets</string>

    <string name="main_activity_title">Your portfolio:</string>
    <string name="asset_type_list_activity_title">Choose type of asset:</string>
    <string name="asset_list_activity_title">Choose specific asset:</string>
    <string name="add_asset_activity_title">Enter amount:</string>

    <string name="add_asset">Add asset</string>
    <string name="details">Details: </string>
    <string name="total_value">Total value: </string>
    <string name="asset">Asset</string>
    <string name="unit_price">Unit price</string>
    <string name="units">Units</string>
    <string name="value">Value</string>
    <string name="amount">amount</string>
    <string name="save_asset">save asset</string>

    <string name="total_value_text_view">%1$.0f %2$s</string>
    <string name="value_value">%1$.0f $</string>
    <string name="calculated_value">value = %1$.02f %2$s</string>
    <string name="rate">%1$s/%2$s = %3$.02f</string>
    <string name="float_two_decimal">%1$.02f</string>
    <string name="float_two_decimal_currency">%1$.02f %2$s</string>
    <string name="float_one_decimal_K_currency">%1$.01fK %2$s</string>
    <string name="float_two_decimal_K">%1$.02fK</string>
    <string name="float_one_decimal_K">%1$.01fK</string>
    <string name="float_no_decimal_currency">%1$.0f %2$s</string>
    <string name="float_no_decimal">%1$.0f</string>
    <string name="remove_all_assets">Remove all assets</string>
    <string name="change_base_currency">Choose base currency</string>
    <string name="choose_base_currency">Choose base currency</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="network_missing">Network not available :(</string>
    <string name="loading">Loading...</string>
    <string name="want_to_remove_all_assets">Do you want to remove all assets?</string>
    <string name="want_to_remove_asset">Do you want to remove asset?</string>
    <string name="all_assets_removed">All assets removed.</string>
    <string name="asset_removed">Asset removed.</string>
</resources>
